URL(String) constructor is deprecated in Java 21